--- a/src/html/paginaUsuario.html
+++ b/src/html/paginaUsuario.html
@@ -42,7 +42,7 @@
       <div class="header-notifications-wrapper">
         <button id="notificationsButton" class="header-icon-btn" title="Notificações">
           <span class="notifications-icon">🔔</span>
-          <span id="notificationBadge" class="notification-badge" style="display:none;">0</span>
+          <span id="notificationBadge" class="notification-badge">0</span>
         </button>
         <div id="notificationsDropdown" class="notifications-dropdown">
           <div class="notifications-header">
