[INTERMEDIARIA] menu de notificações com carregamento de notfics antigas - perfil

--- a/src/html/paginaUsuario.html
+++ b/src/html/paginaUsuario.html
@@ -55,8 +55,8 @@
           <div id="notificationsList" class="notifications-list">
             <!-- Notificações serão inseridas aqui via JavaScript -->
           </div>
-          <div class="notifications-footer">
-            <a href="#" class="view-all-link">Ver todas</a>
+          <div id="notificationsFooter" class="notifications-footer">
+            <!-- Footer será preenchido via JavaScript -->
           </div>
         </div>
       </div>
