[ADD] controle de paginas no front

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -131,6 +131,9 @@
     <div class="feed-header">
       <h2>Feed</h2>
       <div class="feed-actions">
+        <button id="prevPageBtn" title="Página anterior" disabled>←</button>
+        <span id="pageIndicator">Página 1</span>
+        <button id="nextPageBtn" title="Próxima página">→</button>
         <button id="filterBtn" title="Filtrar">
           <span class="filter-icon">≡</span>
         </button>
