Retirada barra de pesquisa da pagina da noticia e consertado as margens

--- a/src/html/news.html
+++ b/src/html/news.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}" />
     <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='img/logo-notific.svg') }}" />
   </head>
-  <body>
+  <body class="news-page">
     <header>
       <div class="header-logo">
         <a href="{{ url_for('home_routes.home') }}">
