--- a/src/html/admin_roles.html
+++ b/src/html/admin_roles.html
@@ -14,7 +14,7 @@
       <img src="{{ url_for('static', filename='img/notific.svg') }}" alt="Logo Notific" class="logo-ic">
     </a>
     <h1 class="navbar-title">Gestão de Cargos</h1>
-    <a href="{{ url_for('home_routes.home') }}" class="nav-back-link">Voltar</a>
+    <a href="{{ url_for('admin_panel.list_pending_news_view') }}" class="nav-back-link">Voltar</a>
   </nav>
 
   <main class="conteudo-principal">
